--- a/package.json
+++ b/package.json
@@ -16,18 +16,9 @@
   },
   "homepage": "https://github.com/beny25/GMbandit#readme",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.1.0",
-    "@nomicfoundation/hardhat-ethers": "^3.1.2",
-    "@nomicfoundation/hardhat-network-helpers": "^1.1.2",
-    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^1.0.0",
-    "chai": "^4.2.0",
-    "ethers": "^6.10.0",
     "hardhat": "^2.22.0",
-    "hardhat-gas-reporter": "^1.0.10",
-    "solidity-coverage": "^0.8.16",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "@nomicfoundation/hardhat-toolbox": "3.0.0",
+    "@nomicfoundation/hardhat-verify": "1.0.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.0.2",
